--- a/WebshopFrontend/WebshopFrontend.csproj
+++ b/WebshopFrontend/WebshopFrontend.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebshopShared\WebshopShared.csproj" />
+  </ItemGroup>
+
 </Project>
