--- a/WebshopBackend/appsettings.json
+++ b/WebshopBackend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebshopDb": "Server=DESKTOP-7KL11N4\\SQLEXPRESS;Database=WebshopDb;Integrated Security=True;Connect Timeout=30;Trusted_Connection=True; Trust Server Certificate=True;"
+  }
 }
