--- a/WebshopBackend/WebshopBackend.csproj
+++ b/WebshopBackend/WebshopBackend.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\WebshopShared\WebshopShared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
