added Laptop connectionstring

--- a/WebshopBackend/appsettings.json
+++ b/WebshopBackend/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebshopDb": "Server=DESKTOP-7KL11N4\\SQLEXPRESS;Database=WebshopDb;Integrated Security=True;Connect Timeout=30;Trusted_Connection=True; Trust Server Certificate=True;"
+    "WebshopDbPc": "Server=DESKTOP-7KL11N4\\SQLEXPRESS;Database=WebshopDb;Integrated Security=True;Connect Timeout=30;Trusted_Connection=True; Trust Server Certificate=True;",
+    "WebshopDbLaptop": "Server=JONATAN84\\SQLEXPRESS;Database=WebshopDb;Integrated Security=True;Connect Timeout=30;Trusted_Connection=True; Trust Server Certificate=True;"
   }
 }
